src/tess/tl/test/pass/test_c_opaque_type.tl
#module main
#import <cstdio.tl>

main() {
    stream := c_tmpfile()
    _      := c_fclose(stream)
    0
}
